--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "config": "^3.3.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
